--- a/dst/confidentiality/index.html
+++ b/dst/confidentiality/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Notice of Confidentiality | Flatirons Recovery</title>
+    <title>Privacy Policy | Flatirons Recovery</title>
 
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="Flatirons Recovery Centers">
-	<meta property="og:title" content="Notice of Confidentiality | Flatirons Recovery">
+	<meta property="og:title" content="Privacy Policy | Flatirons Recovery">
 	<meta property="og:description" content="Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!">
 	<meta property="og:image" content="/assets/images/wooden-fence.jpg" />
 
@@ -111,6 +111,8 @@
                                 <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/mindfulness">Mindfulness</a></li>
                                 <li><a href="/admission">Admission</a></li>
+                                <li><a href="/team">Team</a></li>
+                                <li><a href="/facility">Facility</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
                         </li>
@@ -133,15 +135,53 @@
 <div class="main">
     <div class="gradient">
         <div>
-            <h1>Notice of Confidentiality</h1>
+            <h1>Privacy Policy</h1>
         </div>
     </div>
 </div>
 
 <div class="wrap">
-    <p>Information regarding your healthcare, including payment for healthcare, is protected by two federal laws:  the Health Insurance Portability and Accountability Act of 1996 (“HIPAA”), 42 U.S.C. § 1320d et seq., 45 C.F.R. Parts 160 & 164, and the Confidentiality Law, 42 U.S.C. § 290dd-2, 42 C.F.R. Part 2.  Under these laws, we may not communicate to a person outside of the Flatirons Recovery that clients attend Flatirons Recovery, nor may we disclose any information identifying clients as an alcohol or drug abuser, or disclose any other protected information except as permitted by law.  The law allows us to share information with your caregivers, your insurance companies, and financially responsible people.</p>
-    <p>A statement explaining client’s personal rights and information about making complaints is attached hereto in our Admissions Agreement.  Clients acknowledge that they have been personally advised of, and given at admission, a copy of this statement explaining personal rights and information about making complaints.</p>
-    <p>As a participant at Flatirons Recovery, clients may become aware of protected health information relating to other participants of Flatirons Recovery, including, but not limited to, the fact that an individual is being treated at Flatirons Recovery.  Clients understand and acknowledge that protected health information about other participants is personal, and agree to maintain the confidentiality of any such information, whether written or oral, that they may become aware of as a result of client’s participation in Flatirons Recovery treatment program.  Client understands that violating this provision may result in discharge and termination from Flatirons Recovery’s treatment program.</p>
+    <h3>Flatirons Recovery - Privacy Policy</h3>
+
+<p>Flatirons Recovery takes the following measures ensure that all communication and/or coordination of protected health information (PHI) is shared in accordance with all applicable State and Federal requirements, as well as to protect the confidentiality unless otherwise mandated by law.</p>
+<ul>
+    <li>All outpatient medical and therapy records will be kept for period of at least 7 years from the time of actual discharge by Flatirons Recovery.</li>
+    <ul>
+        <li>Medical and therapy records consisting of client PHI may include but are not limited to: name, demographic information, referral information, admission notes, admission paperwork, assessments, evaluations, progress notes, treatment plan, medical and medication protocols, discharge care plan, discharge summary and financial/payment information. These records are necessary to provide clients with quality therapeutic care, and to receive payment for treatment services from third party payers and are required by state licensing mandates.</li>
+    </ul>
+    <li>All client medical and therapy records are confidential to protect our client’s privacy and require informed written consent to be shared.</li>
+    <ul>
+        <li>Written/informed consent incorporates the following information: Name of person/agency/organization to which information is being shared; specific PHI to be disclosed; specific nature for the disclosure of PHI; client signatures with date; notice of release of information; signature of staff witnessing release.</li>
+    </ul>
+    <li>Clients may revoke their written consent to share PHI at any time by informing treatment staff and signing the proper documentation. </li>
+    <li>Access to PHI and its use is limited to Flatirons Recovery clinicians and staff members, and only as those records pertain to the overall care and treatment of the client.</li>
+    <li>Medical and/or clinical records shall be made available to the client upon request.</li>
+    <ul>
+        <li>Flatirons Recovery may provide a copy or a summary of client’s PHI, usually within 30 days of a request, unless it is determined that to do so would substantially harm the client, or another individual.</li>
+    </ul>
+    <li>Clients may ask Flatirons Recovery not to use or share certain PHI for treatment, care coordination, payment, or our operations.  However, in the event of such a request, Flatirons Recovery may deny the request if it is determined that to do so would impact client safety and/or care.</li>
+    <li>A client’s file may be released under court-order or for a State audit.</li>
+    <li>Client PHI will only be disclosed to those outside of Flatirons Recovery when express written consent or authorization has been obtained except as required by law, or allowable court order. This includes, but is not limited to: reporting suspected child abuse or neglect; reporting suspected elder abuse or neglect; when court ordered to release information; when there is a legal duty to warn or take action regarding imminent danger to others; if a client is determined to be a danger to themselves or others or if they are gravely disabled; if a client dies and a coroner is investigating their death.</li>
+    <li>All releases of information for PHI will be clearly identified and include a confidentially statement on the form.</li>
+    <li>All client PHI shared will be documented in the client’s electronic health record. </li>
+    <li>Flatirons Recovery may have to release information in an emergency situation. If this occurs, the staff member will document what information was released, to whom, and for what reason in the client’s electronic health record. Additionally, the client and/or their guardian will be made aware of such a release.</li>
+    <li>All client records will be kept and maintained in compliance with all applicable Federal and State laws.</li>
+    <li>Clients may file a complaint/grievance if they feel that Flatirons Recovery have violated their rights by writing, or emailing Flatirons Recovery’s Executive Director.</li>
+    <li>Clients may also file a complaint/grievance with:
+        <p>Colorado Department of Human Services, Office of Behavioral Health 3824 Princeton Circle, Denver, CO 80236 (303) 866-7400 <br/>
+            or<br/>
+            U.S. Department of Health and Human Services Office for Civil Rights by sending a letter to 200 Independence Avenue,
+            S.W., Washington, D.C. 20201, calling 1-877-696-6775, or visiting <a href="www.hhs.gov/ocr/privacy/hipaa/complaints/" target="_blank" rel="external">www.hhs.gov/ocr/privacy/hipaa/complaints/</a>.
+        </p>
+
+    </li>
+    <li>Flatirons Recovery will not retaliate in any way if a client chooses to file a grievance with Flatirons Recovery, CDHS-OBH, or USDHHS.</li>
+</ul>
+
+
+
+
+
 </div>
 
     </main>
