--- a/dst/team/index.html
+++ b/dst/team/index.html
@@ -111,6 +111,8 @@
                                 <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/mindfulness">Mindfulness</a></li>
                                 <li><a href="/admission">Admission</a></li>
+                                <li><a href="/team">Team</a></li>
+                                <li><a href="/facility">Facility</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
                         </li>
@@ -140,42 +142,54 @@
 
 <div class="wrap">
     <div class="row">
-        <div class="col-xs-12 col-sm-3">
-            <img src="./team/mark_oberg.jpg" alt="">
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/mark_oberg.jpg" alt="">
             <h4>Mark Oberg LPC, LAC</h4>
             <p>Executive Director/Clinical Director</p>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/mattneptune.jpg" alt="">
+            <h4>Matthew Neptune</h4>
+            <p>Director of Operations</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/Sarah-Levin.jpg" alt="">
+            <h4>Sarah Levin, LPC</h4>
+            <p>Lead Therapist</p>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/rachael-uris.jpg" alt="">
+            <h4>Rachael Uris, MA</h4>
+            <p>Director of Business Development</p>
         </div>
         <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+            <img src="./team/images/valerie-purdie.jpg" alt="">
+            <h4>Valerie Purdie</h4>
+            <p>Director of Admissions</p>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/jaroed-sarmeinto.jpg" alt="">
+            <h4>Jaroed Sarmiento</h4>
+            <p>House Manager</p>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/Layne-Jeffcoat.jpg" alt="">
+            <h4>Layne Jeffcoat</h4>
+            <p>House Manager</p>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/kelly-miller.jpg" alt="">
+            <h4>Kelly Miller</h4>
+            <p>Nutritional Therapist</p>
         </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
-        </div>
-        <div class="col-xs-12 col-sm-3">
-            <img src="https://via.placeholder.com/600x900" alt="">
-            <h4>Name, Title</h4>
+        
+        <div class="col-xs-12 col-sm-6 col-md-3">
+            <img src="./team/images/Lindsey-McCune.jpg" alt="">
+            <h4>Lindsey McCune</h4>
+            <p>Yoga</p>
         </div>
     </div>
 </div>
-
     </main>
 
     <footer>
