subscriber call to action

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -126,6 +126,10 @@
         <!-- { "layout": "*" } -->
     </main>
 
+    <div class="green">
+        <!-- { "partial": "/partials/subscribe.p.html" } -->
+    </div>
+
     <footer>
     	<div class="row middle-xs center-xs">
 			<div class="col-xs-12 col-sm-4">
