menu update, build

--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -80,7 +80,14 @@
         		<nav class="nav-bar" hidden>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="/about">About</a></li>
+                        <li>
+                            <a>About</a>
+                            <ul>
+                                <li><a href="/about">About</a></li>
+                                <li><a href="/team">Team</a></li>
+                                <li><a href="/facility">Facility</a></li>
+                            </ul>
+                        </li>
                         <li>
                             <!-- <a href="/treatment">Treatment</a></li> -->
                             <a>Treatment</a>
@@ -111,8 +118,6 @@
                                 <li><a href="/faq">FAQ</a></li>
                                 <li><a href="/mindfulness">Mindfulness</a></li>
                                 <li><a href="/admission">Admission</a></li>
-                                <li><a href="/team">Team</a></li>
-                                <li><a href="/facility">Facility</a></li>
                                 <li><a href="/contact">Contact</a></li>
                             </ul>
                         </li>
