removed center from name

--- a/src/confidentiality/index.v.html
+++ b/src/confidentiality/index.v.html
@@ -1,7 +1,7 @@
 
 <!-- {
     "title": "Privacy Policy | Flatirons Recovery",
-    "description": "Flatirons Recovery Center provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!",
+    "description": "Flatirons Recovery provides clients the opportunity to begin their healing process from substance use/dual-diagnosis disorders on 30-, 60-, and 90-day tracks. Learn more about us!",
     "keywords": "addiction treatment, substance use, mental health disorder",
     "ogImage": "/assets/images/wooden-fence.jpg"
 } -->
