--- a/src/error.v.html
+++ b/src/error.v.html
@@ -1,6 +1,6 @@
 <!-- {
-    "title": "Flatirons Recovery Center | Colorado Substance Abuse Treatment",
-    "description": "Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
+    "title": "Flatirons Recovery | Colorado Substance Abuse Treatment",
+    "description": "Flatirons Recovery is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
     "keywords": "addiction treatment, substance use, mental health disorder"
 } -->
 
