--- a/src/mental-health/index.v.html
+++ b/src/mental-health/index.v.html
@@ -26,8 +26,8 @@
     <p>Dual-diagnosis treatment refers to an individual who meets DSM-V diagnostic criteria for both a substance use disorder, as well as a mental health disorder. These are also referred to as co-occurring disorders.</p>
     <p>According to the National Alliance on Mental Illness (NAMI), approximately  19.3% of U.S. adults with mental illness also experienced a substance use disorder in 2018, equating to 9.2 million individuals.</p>
     <p>Often when people are using substances, the symptoms that they exhibit mimic those of mental health disorders. For example, a person using cocaine or methamphetamine excessively may begin to hallucinate, or to behave in ways that are very similar to someone experiencing a manic episode (not sleeping, grandiose or impulsive behavior).</p>
-    <p>For this reason, it is important for anyone engaging in treatment at Flatirons Recovery Center to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.</p>
-    <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery Center’s skilled therapeutic and medical teams.</p>
+    <p>For this reason, it is important for anyone engaging in treatment at Flatirons Recovery to achieve a period sobriety, in order to more accurately determine and assess the nature of any mental health symptoms they may be experiencing.</p>
+    <p>If it is determined though clinical assessment after a period of sobriety that a client is suffering from both a substance use disorder, as well as a mental health disorder, both conditions will be treated concurrently by Flatirons Recovery skilled therapeutic and medical teams.</p>
 </div>
 
 <div class="green">
