--- a/src/treatment/iop/index.v.html
+++ b/src/treatment/iop/index.v.html
@@ -1,6 +1,6 @@
 <!-- {
     "title": "Intensive Outpatient (IOP) | Flatirons Recovery",
-    "description": "At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.",
+    "description": "At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy. Learn about our treatment program.",
     "keywords": "intensive outpatient, iop program, treatment program",
     "ogImage": "/treatment/blue-brook.jpg"
 } -->
@@ -23,7 +23,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
+            <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am - 12pm for group therapy.</p>
             <p>Group topics addressed in IOP include, but are not limited to:</p>
             <ul>
                 <li>CBT/DBT skills for relapse prevention</li>
