--- a/src/treatment/php/index.v.html
+++ b/src/treatment/php/index.v.html
@@ -34,7 +34,7 @@
                 <li>Community-based recovery models such as Smart Recovery and AA/12-Step.</li>
                 <li>Experiential programing including art therapy, equine therapy, hiking, and rock climbing.</li>
             </ul>
-            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery Center’s sober living, please <a href="/sober-living">click here</a>.</p>
+            <p>Clients may participate in Day Treatment while living at home, though it is recommended that clients live in our staffed sober living house for the full duration of their Day Treatment program. For more information about Flatirons Recovery sober living, please <a href="/sober-living">click here</a>.</p>
             <p>During Day Treatment, clients will also meet with a therapist for 1-hour of individual therapy per week, participate in family therapy on an as needed basis, as well as meet regularly with our Medical Director for any medication and/or physical health needs. Individual therapy may include biofeedback, art therapy, and trauma therapy such as EMDR, when indicated.</p>
             <p>Day Treatment at Flatirons Recovery lasts anywhere from 4 to 12 weeks to meet the individual treatment needs of different clients.</p>
             <p>Often, clients transition from Day Treatment to our IOP for 4-12 weeks in order to continue receiving recovery support, structure, and accountability, while re-engaging in work and/or independent living.</p>
