--- a/src/treatment/therapy/index.v.html
+++ b/src/treatment/therapy/index.v.html
@@ -23,7 +23,7 @@
 <div class="wrap">
     <div class="row">
         <div class="col-xs">
-            <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin the healing process.</p>
+            <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin the healing process.</p>
             <p>Topics that may be addressed during individual sessions at Flatirons Recovery include:</p>
             <ul>
                 <div class="row">
@@ -45,14 +45,14 @@
         </div>
         <div class="col-xs-12">
             <h3>Family Therapy</h3>
-            <p>At Flatirons Recovery Center, clients may engage in a bi-weekly, 1-hour family sessions, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
+            <p>At Flatirons Recovery, clients may engage in a bi-weekly, 1-hour family sessions, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p>
             <p>These sessions will be coordinated by therapists, and typically take place beginning two weeks into client’s treatment programs.</p>
         </div>
     </div>
     
         <div class="col-xs-12">
             <h3>Group Therapy</h3>
-            <p>At Flatirons Recovery Center, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
+            <p>At Flatirons Recovery, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
             <p>Topics that may be addressed during group therapy sessions at Flatirons Recovery include:</p>
             <ul>
                 <div class="row">
