--- a/src/admission/index.v.html
+++ b/src/admission/index.v.html
@@ -25,12 +25,12 @@
         <div class="col-xs">
             <h2>Admission Process</h2>
             <ul>
-                <li>Client and/or client’s family makes initial contact with Flatirons Recovery Center’s admissions staff to gather information both on our program, as well as to inform our admission’s team regarding treatment needs—in particular, whether or not the client may need detoxification services before admission.</li>
-                <li>Flatirons Recovery Center performs verification of insurance benefits.</li>
-                <li>Flatirons Recovery Center calls financially responsible party to discuss insurance coverage and cost of treatment.</li>
+                <li>Client and/or client’s family makes initial contact with Flatirons Recovery admissions staff to gather information both on our program, as well as to inform our admission’s team regarding treatment needs—in particular, whether or not the client may need detoxification services before admission.</li>
+                <li>Flatirons Recovery performs verification of insurance benefits.</li>
+                <li>Flatirons Recovery calls financially responsible party to discuss insurance coverage and cost of treatment.</li>
                 <li>An over the phone pre-admission assessment is performed with the prospective client.</li>
-                <li>The results of the pre-admission assessment are reviewed by Flatirons Recovery Center’s Clinical Director to determine appropriateness of client for the program.</li>
-                <li>If it is determined that the client is appropriate for treatment at Flatirons Recovery Center, a service agreement will be signed by the client and his or her financial representative.</li>
+                <li>The results of the pre-admission assessment are reviewed by Flatirons Recovery Clinical Director to determine appropriateness of client for the program.</li>
+                <li>If it is determined that the client is appropriate for treatment at Flatirons Recovery, a service agreement will be signed by the client and his or her financial representative.</li>
                 <li>An admission date and time is scheduled at least 24 hours in advance.</li>
             </ul>
 
@@ -45,7 +45,7 @@
         </div>
         <div class="row center-xs">
             <div class="col-xs">
-                <h4>Consider reading our frequently asked questions. Learn more about Flatirons Recovery Center.</h4>
+                <h4>Consider reading our frequently asked questions. Learn more about Flatirons Recovery.</h4>
                 <a class="button border" href="/faq">frequently asked questions</a>
             </div>
         </div>
