--- a/src/index.v.html
+++ b/src/index.v.html
@@ -1,6 +1,6 @@
 <!-- {
-    "title": "Flatirons Recovery Center | Colorado Substance Abuse Treatment",
-    "description": "Flatirons Recovery Center is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
+    "title": "Flatirons Recovery | Colorado Substance Abuse Treatment",
+    "description": "Flatirons Recovery is a Colorado Recovery Center that helps people through the process of healing from addiction with greater clarity of purpose and connection to community. Learn more!",
     "keywords": "addiction treatment, substance use, mental health disorder",
     "ogImage": "/assets/images/cover.jpg"
 } -->
@@ -35,7 +35,7 @@
                     <h3>Our Mission</h3>
                     <p>The mission of Flatirons Recovery is to walk alongside our clients through the process of healing from addiction with greater clarity of purpose, connection to community, and ability to take right action in their lives.</p>
                     <h3>Why Us?</h3>
-                    <p>What differentiates Flatirons Recovery Center from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
+                    <p>What differentiates Flatirons Recovery from other treatment providers is our <a href="/mindfulness">mindfulness-influenced curriculum</a>, commitment to small group sizes, and belief that all our clients are innately good, and must be treated as such. Our highly skilled, compassionate clinical staff provide outstanding care that meets clients as they are, in order to guide them through the process of healing from a wide range of substance use, and <a href="/mental-health">mental health disorders</a>.</p>
                 </div>
             </div>
             <div class="row center-xs">
@@ -96,11 +96,11 @@
                     <p>Our treatment team focuses on healing the whole individual, instead of focusing on one specific area of a person’s life that may be problematic. We do this by working with clients to develop action plans for relapse prevention, beginning to heal trauma, learning skills for more successful coping with mental health challenges, eating healthier, getting more consistent exercise, and having fun in recovery.</p>
 
                     <!-- <h3>Individual</h3>
-                    <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
+                    <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order to develop more insight into the painful habitual patterns that have influenced their substance use disorder, as well as to develop more ability to take appropriate action to begin shifting those.</p>
                     <h3>Group</h3>
                     <p>Along side individual therapy, clients will engage in 30-hours of group programming during PHP/Day Treatment programming, and 9-15 hours of group programming during Intensive Outpatient programming.</p>
                     <h3>Family</h3>
-                    <p>At Flatirons Recovery Center, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p> -->
+                    <p>At Flatirons Recovery, client will engage in a bi-weekly, 1-hour family therapy session, in order to develop more insight into the systemic ways in which substance use disorders may be impacting their family life.</p> -->
                 </div>
             </div>
             <div class="row center-xs">
