--- a/src/layout.l.html
+++ b/src/layout.l.html
@@ -11,7 +11,7 @@
 
     <meta property="og:locale" content="en_US">
 	<meta property="og:type" content="website">
-	<meta property="og:site_name" content="Flatirons Recovery Centers">
+	<meta property="og:site_name" content="Flatirons Recovery">
 	<meta property="og:title" content="<!-- { "variable": "title"} -->">
 	<meta property="og:description" content="<!-- { "variable": "description" } -->">
 	<meta property="og:image" content="<!-- { "variable": "ogImage" } -->" />
