--- a/src/treatment/index.v.html
+++ b/src/treatment/index.v.html
@@ -32,7 +32,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="blue tile">
                 <h3>Therapy</h3>
-                <p>At Flatirons Recovery Center, clients will engage in a weekly, 1-hour individual therapy session in order
+                <p>At Flatirons Recovery, clients will engage in a weekly, 1-hour individual therapy session in order
                     to develop more insight into the habitual patterns that have influenced their substance use disorder.
                 </p>
                 <a href="/treatment/therapy" class="button border">Learn More</a>
@@ -49,7 +49,7 @@
         <div class="col-xs-12 col-sm-6 col-md-3">
             <div class="blue tile">
                 <h3>Intensive Outpatient</h3>
-                <p>At Flatirons Recovery Center, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
+                <p>At Flatirons Recovery, our IOP program meets Monday, Wednesday, and Thursday evenings from 9am -
                     12pm for group therapy.</p>
                 <a href="/treatment/iop" class="button border">Learn More</a>
             </div>
@@ -66,7 +66,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h3>Support Groups for Family Members</h3>
-            <p>Flatirons Recovery Center highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
+            <p>Flatirons Recovery highly recommends that family members support themselves while their loved one is in treatment. The following in a small sampling of the community supports that may be appropriate and/or available in your community.</p>
             <ul>
                 <li><a href="https://www.smartrecovery.org/family-friends-and-addiction-recovery/" target="_blank">SMART Recovery Family and Friends</a></li>
                 <li><a href="https://www.nami.org/Home" target="_blank">NAMI</a></li>
